generated_simple/js/grammars/js/JavaScript_simpleParser.cpp

// Generated from grammars/js/JavaScript_simple.g4 by ANTLR 4.13.1


#include "JavaScript_simpleListener.h"
#include "JavaScript_simpleVisitor.h"

#include "JavaScript_simpleParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct JavaScript_simpleParserStaticData final {
  JavaScript_simpleParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  JavaScript_simpleParserStaticData(const JavaScript_simpleParserStaticData&) = delete;
  JavaScript_simpleParserStaticData(JavaScript_simpleParserStaticData&&) = delete;
  JavaScript_simpleParserStaticData& operator=(const JavaScript_simpleParserStaticData&) = delete;
  JavaScript_simpleParserStaticData& operator=(JavaScript_simpleParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag javascript_simpleParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
JavaScript_simpleParserStaticData *javascript_simpleParserStaticData = nullptr;

void javascript_simpleParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (javascript_simpleParserStaticData != nullptr) {
    return;
  }
#else
  assert(javascript_simpleParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<JavaScript_simpleParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "expressionStatement", "expression", "assignmentExpression", 
      "functionCall", "argumentList", "identifier", "literal", "variableDeclaration", 
      "functionDeclaration", "parameterList", "ifStatement", "forStatement", 
      "forInitializer", "whileStatement", "returnStatement", "blockStatement"
    },
    std::vector<std::string>{
      "", "", "", "'function'", "'var'", "'let'", "'const'", "'if'", "'else'", 
      "'for'", "'while'", "'return'", "", "", "", "'{'", "'}'", "'('", "')'", 
      "'['", "']'", "';'", "','", "'.'", "'='", "'+'", "'-'", "'*'", "'/'"
    },
    std::vector<std::string>{
      "", "WS", "COMMENT", "FUNCTION", "VAR", "LET", "CONST", "IF", "ELSE", 
      "FOR", "WHILE", "RETURN", "IDENTIFIER", "NUMBER", "STRING", "LBRACE", 
      "RBRACE", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "SEMICOLON", 
      "COMMA", "DOT", "EQUALS", "PLUS", "MINUS", "MULTIPLY", "DIVIDE"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  javascript_simpleParserStaticData = staticData.release();
}

}

JavaScript_simpleParser::JavaScript_simpleParser(TokenStream *input) : JavaScript_simpleParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

JavaScript_simpleParser::JavaScript_simpleParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  JavaScript_simpleParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *javascript_simpleParserStaticData->atn, javascript_simpleParserStaticData->decisionToDFA, javascript_simpleParserStaticData->sharedContextCache, options);
}

JavaScript_simpleParser::~JavaScript_simpleParser() {
  delete _interpreter;
}

const atn::ATN& JavaScript_simpleParser::getATN() const {
  return *javascript_simpleParserStaticData->atn;
}

std::string JavaScript_simpleParser::getGrammarFileName() const {
  return "JavaScript_simple.g4";
}

const std::vector<std::string>& JavaScript_simpleParser::getRuleNames() const {
  return javascript_simpleParserStaticData->ruleNames;
}

const dfa::Vocabulary& JavaScript_simpleParser::getVocabulary() const {
  return javascript_simpleParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView JavaScript_simpleParser::getSerializedATN() const {
  return javascript_simpleParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

JavaScript_simpleParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<JavaScript_simpleParser::StatementContext *> JavaScript_simpleParser::ProgramContext::statement() {
  return getRuleContexts<JavaScript_simpleParser::StatementContext>();
}

JavaScript_simpleParser::StatementContext* JavaScript_simpleParser::ProgramContext::statement(size_t i) {
  return getRuleContext<JavaScript_simpleParser::StatementContext>(i);
}


size_t JavaScript_simpleParser::ProgramContext::getRuleIndex() const {
  return JavaScript_simpleParser::RuleProgram;
}

void JavaScript_simpleParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaScript_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void JavaScript_simpleParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaScript_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any JavaScript_simpleParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JavaScript_simpleVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

JavaScript_simpleParser::ProgramContext* JavaScript_simpleParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, JavaScript_simpleParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(39);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 65272) != 0)) {
      setState(36);
      statement();
      setState(41);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

JavaScript_simpleParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JavaScript_simpleParser::ExpressionStatementContext* JavaScript_simpleParser::StatementContext::expressionStatement() {
  return getRuleContext<JavaScript_simpleParser::ExpressionStatementContext>(0);
}

JavaScript_simpleParser::VariableDeclarationContext* JavaScript_simpleParser::StatementContext::variableDeclaration() {
  return getRuleContext<JavaScript_simpleParser::VariableDeclarationContext>(0);
}

JavaScript_simpleParser::FunctionDeclarationContext* JavaScript_simpleParser::StatementContext::functionDeclaration() {
  return getRuleContext<JavaScript_simpleParser::FunctionDeclarationContext>(0);
}

JavaScript_simpleParser::IfStatementContext* JavaScript_simpleParser::StatementContext::ifStatement() {
  return getRuleContext<JavaScript_simpleParser::IfStatementContext>(0);
}

JavaScript_simpleParser::ForStatementContext* JavaScript_simpleParser::StatementContext::forStatement() {
  return getRuleContext<JavaScript_simpleParser::ForStatementContext>(0);
}

JavaScript_simpleParser::WhileStatementContext* JavaScript_simpleParser::StatementContext::whileStatement() {
  return getRuleContext<JavaScript_simpleParser::WhileStatementContext>(0);
}

JavaScript_simpleParser::ReturnStatementContext* JavaScript_simpleParser::StatementContext::returnStatement() {
  return getRuleContext<JavaScript_simpleParser::ReturnStatementContext>(0);
}

JavaScript_simpleParser::BlockStatementContext* JavaScript_simpleParser::StatementContext::blockStatement() {
  return getRuleContext<JavaScript_simpleParser::BlockStatementContext>(0);
}


size_t JavaScript_simpleParser::StatementContext::getRuleIndex() const {
  return JavaScript_simpleParser::RuleStatement;
}

void JavaScript_simpleParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaScript_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void JavaScript_simpleParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaScript_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any JavaScript_simpleParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JavaScript_simpleVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

JavaScript_simpleParser::StatementContext* JavaScript_simpleParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, JavaScript_simpleParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(50);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case JavaScript_simpleParser::IDENTIFIER:
      case JavaScript_simpleParser::NUMBER:
      case JavaScript_simpleParser::STRING: {
        enterOuterAlt(_localctx, 1);
        setState(42);
        expressionStatement();
        break;
      }

      case JavaScript_simpleParser::VAR:
      case JavaScript_simpleParser::LET:
      case JavaScript_simpleParser::CONST: {
        enterOuterAlt(_localctx, 2);
        setState(43);
        variableDeclaration();
        break;
      }

      case JavaScript_simpleParser::FUNCTION: {
        enterOuterAlt(_localctx, 3);
        setState(44);
        functionDeclaration();
        break;
      }

      case JavaScript_simpleParser::IF: {
        enterOuterAlt(_localctx, 4);
        setState(45);
        ifStatement();
        break;
      }

      case JavaScript_simpleParser::FOR: {
        enterOuterAlt(_localctx, 5);
        setState(46);
        forStatement();
        break;
      }

      case JavaScript_simpleParser::WHILE: {
        enterOuterAlt(_localctx, 6);
        setState(47);
        whileStatement();
        break;
      }

      case JavaScript_simpleParser::RETURN: {
        enterOuterAlt(_localctx, 7);
        setState(48);
        returnStatement();
        break;
      }

      case JavaScript_simpleParser::LBRACE: {
        enterOuterAlt(_localctx, 8);
        setState(49);
        blockStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionStatementContext ------------------------------------------------------------------

JavaScript_simpleParser::ExpressionStatementContext::ExpressionStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JavaScript_simpleParser::ExpressionContext* JavaScript_simpleParser::ExpressionStatementContext::expression() {
  return getRuleContext<JavaScript_simpleParser::ExpressionContext>(0);
}

tree::TerminalNode* JavaScript_simpleParser::ExpressionStatementContext::SEMICOLON() {
  return getToken(JavaScript_simpleParser::SEMICOLON, 0);
}


size_t JavaScript_simpleParser::ExpressionStatementContext::getRuleIndex() const {
  return JavaScript_simpleParser::RuleExpressionStatement;
}

void JavaScript_simpleParser::ExpressionStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaScript_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpressionStatement(this);
}

void JavaScript_simpleParser::ExpressionStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaScript_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpressionStatement(this);
}


std::any JavaScript_simpleParser::ExpressionStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JavaScript_simpleVisitor*>(visitor))
    return parserVisitor->visitExpressionStatement(this);
  else
    return visitor->visitChildren(this);
}

JavaScript_simpleParser::ExpressionStatementContext* JavaScript_simpleParser::expressionStatement() {
  ExpressionStatementContext *_localctx = _tracker.createInstance<ExpressionStatementContext>(_ctx, getState());
  enterRule(_localctx, 4, JavaScript_simpleParser::RuleExpressionStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(52);
    expression();
    setState(53);
    match(JavaScript_simpleParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

JavaScript_simpleParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JavaScript_simpleParser::AssignmentExpressionContext* JavaScript_simpleParser::ExpressionContext::assignmentExpression() {
  return getRuleContext<JavaScript_simpleParser::AssignmentExpressionContext>(0);
}

JavaScript_simpleParser::FunctionCallContext* JavaScript_simpleParser::ExpressionContext::functionCall() {
  return getRuleContext<JavaScript_simpleParser::FunctionCallContext>(0);
}

JavaScript_simpleParser::IdentifierContext* JavaScript_simpleParser::ExpressionContext::identifier() {
  return getRuleContext<JavaScript_simpleParser::IdentifierContext>(0);
}

JavaScript_simpleParser::LiteralContext* JavaScript_simpleParser::ExpressionContext::literal() {
  return getRuleContext<JavaScript_simpleParser::LiteralContext>(0);
}


size_t JavaScript_simpleParser::ExpressionContext::getRuleIndex() const {
  return JavaScript_simpleParser::RuleExpression;
}

void JavaScript_simpleParser::ExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaScript_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpression(this);
}

void JavaScript_simpleParser::ExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaScript_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpression(this);
}


std::any JavaScript_simpleParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JavaScript_simpleVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}

JavaScript_simpleParser::ExpressionContext* JavaScript_simpleParser::expression() {
  ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, getState());
  enterRule(_localctx, 6, JavaScript_simpleParser::RuleExpression);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(59);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(55);
      assignmentExpression();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(56);
      functionCall();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(57);
      identifier();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(58);
      literal();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentExpressionContext ------------------------------------------------------------------

JavaScript_simpleParser::AssignmentExpressionContext::AssignmentExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JavaScript_simpleParser::AssignmentExpressionContext::IDENTIFIER() {
  return getToken(JavaScript_simpleParser::IDENTIFIER, 0);
}

tree::TerminalNode* JavaScript_simpleParser::AssignmentExpressionContext::EQUALS() {
  return getToken(JavaScript_simpleParser::EQUALS, 0);
}

JavaScript_simpleParser::ExpressionContext* JavaScript_simpleParser::AssignmentExpressionContext::expression() {
  return getRuleContext<JavaScript_simpleParser::ExpressionContext>(0);
}


size_t JavaScript_simpleParser::AssignmentExpressionContext::getRuleIndex() const {
  return JavaScript_simpleParser::RuleAssignmentExpression;
}

void JavaScript_simpleParser::AssignmentExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaScript_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignmentExpression(this);
}

void JavaScript_simpleParser::AssignmentExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaScript_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignmentExpression(this);
}


std::any JavaScript_simpleParser::AssignmentExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JavaScript_simpleVisitor*>(visitor))
    return parserVisitor->visitAssignmentExpression(this);
  else
    return visitor->visitChildren(this);
}

JavaScript_simpleParser::AssignmentExpressionContext* JavaScript_simpleParser::assignmentExpression() {
  AssignmentExpressionContext *_localctx = _tracker.createInstance<AssignmentExpressionContext>(_ctx, getState());
  enterRule(_localctx, 8, JavaScript_simpleParser::RuleAssignmentExpression);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61);
    match(JavaScript_simpleParser::IDENTIFIER);
    setState(62);
    match(JavaScript_simpleParser::EQUALS);
    setState(63);
    expression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionCallContext ------------------------------------------------------------------

JavaScript_simpleParser::FunctionCallContext::FunctionCallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JavaScript_simpleParser::FunctionCallContext::IDENTIFIER() {
  return getToken(JavaScript_simpleParser::IDENTIFIER, 0);
}

tree::TerminalNode* JavaScript_simpleParser::FunctionCallContext::LPAREN() {
  return getToken(JavaScript_simpleParser::LPAREN, 0);
}

tree::TerminalNode* JavaScript_simpleParser::FunctionCallContext::RPAREN() {
  return getToken(JavaScript_simpleParser::RPAREN, 0);
}

JavaScript_simpleParser::ArgumentListContext* JavaScript_simpleParser::FunctionCallContext::argumentList() {
  return getRuleContext<JavaScript_simpleParser::ArgumentListContext>(0);
}


size_t JavaScript_simpleParser::FunctionCallContext::getRuleIndex() const {
  return JavaScript_simpleParser::RuleFunctionCall;
}

void JavaScript_simpleParser::FunctionCallContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaScript_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionCall(this);
}

void JavaScript_simpleParser::FunctionCallContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaScript_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionCall(this);
}


std::any JavaScript_simpleParser::FunctionCallContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JavaScript_simpleVisitor*>(visitor))
    return parserVisitor->visitFunctionCall(this);
  else
    return visitor->visitChildren(this);
}

JavaScript_simpleParser::FunctionCallContext* JavaScript_simpleParser::functionCall() {
  FunctionCallContext *_localctx = _tracker.createInstance<FunctionCallContext>(_ctx, getState());
  enterRule(_localctx, 10, JavaScript_simpleParser::RuleFunctionCall);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    match(JavaScript_simpleParser::IDENTIFIER);
    setState(66);
    match(JavaScript_simpleParser::LPAREN);
    setState(68);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 28672) != 0)) {
      setState(67);
      argumentList();
    }
    setState(70);
    match(JavaScript_simpleParser::RPAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgumentListContext ------------------------------------------------------------------

JavaScript_simpleParser::ArgumentListContext::ArgumentListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<JavaScript_simpleParser::ExpressionContext *> JavaScript_simpleParser::ArgumentListContext::expression() {
  return getRuleContexts<JavaScript_simpleParser::ExpressionContext>();
}

JavaScript_simpleParser::ExpressionContext* JavaScript_simpleParser::ArgumentListContext::expression(size_t i) {
  return getRuleContext<JavaScript_simpleParser::ExpressionContext>(i);
}

std::vector<tree::TerminalNode *> JavaScript_simpleParser::ArgumentListContext::COMMA() {
  return getTokens(JavaScript_simpleParser::COMMA);
}

tree::TerminalNode* JavaScript_simpleParser::ArgumentListContext::COMMA(size_t i) {
  return getToken(JavaScript_simpleParser::COMMA, i);
}


size_t JavaScript_simpleParser::ArgumentListContext::getRuleIndex() const {
  return JavaScript_simpleParser::RuleArgumentList;
}

void JavaScript_simpleParser::ArgumentListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaScript_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArgumentList(this);
}

void JavaScript_simpleParser::ArgumentListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaScript_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArgumentList(this);
}


std::any JavaScript_simpleParser::ArgumentListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JavaScript_simpleVisitor*>(visitor))
    return parserVisitor->visitArgumentList(this);
  else
    return visitor->visitChildren(this);
}

JavaScript_simpleParser::ArgumentListContext* JavaScript_simpleParser::argumentList() {
  ArgumentListContext *_localctx = _tracker.createInstance<ArgumentListContext>(_ctx, getState());
  enterRule(_localctx, 12, JavaScript_simpleParser::RuleArgumentList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    expression();
    setState(77);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == JavaScript_simpleParser::COMMA) {
      setState(73);
      match(JavaScript_simpleParser::COMMA);
      setState(74);
      expression();
      setState(79);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentifierContext ------------------------------------------------------------------

JavaScript_simpleParser::IdentifierContext::IdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JavaScript_simpleParser::IdentifierContext::IDENTIFIER() {
  return getToken(JavaScript_simpleParser::IDENTIFIER, 0);
}


size_t JavaScript_simpleParser::IdentifierContext::getRuleIndex() const {
  return JavaScript_simpleParser::RuleIdentifier;
}

void JavaScript_simpleParser::IdentifierContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaScript_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIdentifier(this);
}

void JavaScript_simpleParser::IdentifierContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaScript_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIdentifier(this);
}


std::any JavaScript_simpleParser::IdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JavaScript_simpleVisitor*>(visitor))
    return parserVisitor->visitIdentifier(this);
  else
    return visitor->visitChildren(this);
}

JavaScript_simpleParser::IdentifierContext* JavaScript_simpleParser::identifier() {
  IdentifierContext *_localctx = _tracker.createInstance<IdentifierContext>(_ctx, getState());
  enterRule(_localctx, 14, JavaScript_simpleParser::RuleIdentifier);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    match(JavaScript_simpleParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LiteralContext ------------------------------------------------------------------

JavaScript_simpleParser::LiteralContext::LiteralContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JavaScript_simpleParser::LiteralContext::STRING() {
  return getToken(JavaScript_simpleParser::STRING, 0);
}

tree::TerminalNode* JavaScript_simpleParser::LiteralContext::NUMBER() {
  return getToken(JavaScript_simpleParser::NUMBER, 0);
}


size_t JavaScript_simpleParser::LiteralContext::getRuleIndex() const {
  return JavaScript_simpleParser::RuleLiteral;
}

void JavaScript_simpleParser::LiteralContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaScript_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLiteral(this);
}

void JavaScript_simpleParser::LiteralContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaScript_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLiteral(this);
}


std::any JavaScript_simpleParser::LiteralContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JavaScript_simpleVisitor*>(visitor))
    return parserVisitor->visitLiteral(this);
  else
    return visitor->visitChildren(this);
}

JavaScript_simpleParser::LiteralContext* JavaScript_simpleParser::literal() {
  LiteralContext *_localctx = _tracker.createInstance<LiteralContext>(_ctx, getState());
  enterRule(_localctx, 16, JavaScript_simpleParser::RuleLiteral);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    _la = _input->LA(1);
    if (!(_la == JavaScript_simpleParser::NUMBER

    || _la == JavaScript_simpleParser::STRING)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDeclarationContext ------------------------------------------------------------------

JavaScript_simpleParser::VariableDeclarationContext::VariableDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JavaScript_simpleParser::VariableDeclarationContext::IDENTIFIER() {
  return getToken(JavaScript_simpleParser::IDENTIFIER, 0);
}

tree::TerminalNode* JavaScript_simpleParser::VariableDeclarationContext::SEMICOLON() {
  return getToken(JavaScript_simpleParser::SEMICOLON, 0);
}
